[package]
name = "qqdb-decode"
version = "0.1.0"
edition = "2021"
authors = ["shenjackyuanjie <3695888@qq.com>"]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
colored = "3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
