[package]
name = "qqdb-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
colored = "3"
flate2 = "1.1.0"
rusqlite = { version = "0.32.1", features = ["bundled", "functions"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
